<resources>
    <string name="app_name">Fit Body</string>
    <string name="age_hint">age</string>
    <string name="male_hint">male</string>
    <string name="female_hint">female</string>
    <string name="height_hint">height(cm)</string>
    <string name="weight_hint">weight(kg)</string>
    <string name="bust_hint">bust(cm)</string>
    <string name="waist_hint">waist(cm)</string>
    <string name="hip_hint">hip(cm)</string>
    <string name="calculate_text">Calculate</string>

    <string-array name="spinner_strings">
        <item>Basal Metabolic Rate (BMR)</item>
        <item>Sedentary - little or no exercise</item>
        <item>Lightly Active - exercise/sports 1-3 times/week</item>
        <item>Moderatetely Active - exercise/sports 3-5 times/week</item>
        <item>Very Active - hard exercise/sports 6-7 times/week</item>
        <item>Extra Active - very hard exercise/sports or physical job</item>
    </string-array>

    <string-array name="spinner_values">
        <item>1</item>
        <item>1.2</item>
        <item>1.375</item>
        <item>1.55</item>
        <item>1.725</item>
        <item>1.9</item>
    </string-array>

    <string name="body_type_desc">Find out your body shape (female only). Four most common female body shapes are Apple, Banana, Pear and Hourglass.</string>
    <string name="weight_desc">The Ideal Weight Calculator computes the ideal body weight as well as a healthy body weight range based on height, gender, and age.</string>
    <string name="calorie_desc">The Calorie Calculator can be used to estimate the calories you need to maintain your weight constant.</string>
</resources>
